Fixed issue with mousePressed being called twice on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2609,7 +2609,7 @@ li {
 
 a {
 	text-decoration: none;
-	margin: 10px;
+	margin: 9px;
 	color: #e5e7eb;
 	text-align: center;
 
